Serialbox: mark as optional bundle dependency since HDF5 builds are alternative for most variants

--- a/bundle.yml
+++ b/bundle.yml
@@ -16,6 +16,7 @@ projects :
     - serialbox :
         git     : ${BITBUCKET}/escape/serialbox
         version : v2.5.4/patched
+        optional: true
         cmake   : >
             SERIALBOX_BUILD_SHARED=ON
             SERIALBOX_ENABLE_FORTRAN=ON
