Github: Add GPU builds and verify targets

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
-    name: Test on ${{ matrix.arch }} ${{ matrix.io_library_flag }} ${{ matrix.mpi_flag }}
+    name: Test on ${{ matrix.arch }} ${{ matrix.io_library_flag }} ${{ matrix.mpi_flag }} ${{ matrix.prec_flag }} ${{ matrix.gpu_flag }}
     
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
@@ -32,7 +32,11 @@ jobs:
           
         io_library_flag: ['', '--with-hdf5']  # Switch between Serialbox and HDF5
         
-        mpi_flag: ['', '--with-mpi']
+        mpi_flag: ['', '--with-mpi']  # Enable MPI-parallel build
+
+        prec_flag: ['', '--single-precision']  # Switch single/double precision
+
+        gpu_flag: ['', '--with-gpu']  # GPU-variants enabled
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -55,3 +59,35 @@ jobs:
           ./cloudsc-bundle build --retry-verbose \
           --arch=arch/${{ matrix.arch }} \
           ${{ matrix.mpi_flag }} ${{ matrix.io_library_flag }}
+
+      # Verify targets exist
+      - name: Verify targets
+        run: |
+          targets=(dwarf-P-cloudMicrophysics-IFSScheme)
+          # Without HDF5/Serialbox, no other variants are currently available
+          if [[ "${{ matrix.io_library_flag }}" == "--with-hdf5" ]]
+          then
+            targets+=(dwarf-cloudsc-fortran)
+            if [[ "${{ matrix.gpu_flag }}" == "--with-gpu" ]]
+            then
+              targets+=(dwarf-cloudsc-gpu-claw dwarf-cloudsc-gpu-scc dwarf-cloudsc-gpu-scc-hoist)
+            fi
+          fi
+          fail=0
+          for target in "${targets[@]}"
+          do
+            if [[ ! -f build/bin/$target ]]
+            then
+              fail=1
+              echo "Missing target $target"
+            fi
+          enddo
+          # Check there aren't any other binaries
+          if [[ ${#targets[@]} -lt $(ls build/bin | wc -l) ]]
+          then
+            fail=1
+            echo "Additional targets found in build/bin"
+            echo "Expected: $targets"
+            echo "Found: $(ls build/bin)"
+          fi
+          exit $fail
