Github: move target verification to script

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,32 +62,7 @@ jobs:
 
       # Verify targets exist
       - name: Verify targets
-        run: |
-          targets=(dwarf-P-cloudMicrophysics-IFSScheme)
-          # Without HDF5/Serialbox, no other variants are currently available
-          if [[ "${{ matrix.io_library_flag }}" == "--with-hdf5" ]]
-          then
-            targets+=(dwarf-cloudsc-fortran)
-            if [[ "${{ matrix.gpu_flag }}" == "--with-gpu" ]]
-            then
-              targets+=(dwarf-cloudsc-gpu-claw dwarf-cloudsc-gpu-scc dwarf-cloudsc-gpu-scc-hoist)
-            fi
-          fi
-          fail=0
-          for target in "${targets[@]}"
-          do
-            if [[ ! -f build/bin/$target ]]
-            then
-              fail=1
-              echo "Missing target $target"
-            fi
-          enddo
-          # Check there aren't any other binaries
-          if [[ ${#targets[@]} -lt $(ls build/bin | wc -l) ]]
-          then
-            fail=1
-            echo "Additional targets found in build/bin"
-            echo "Expected: $targets"
-            echo "Found: $(ls build/bin)"
-          fi
-          exit $fail
+        env:
+          io_library_flag: ${{ matrix.io_library_flag }}
+          gpu_flag: ${{ matrix.gpu_flag }}
+        run: .github/scripts/verify-targets.sh
