--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,8 @@ jobs:
         arch:
           - github/ubuntu/gnu/9.3.0
           
-        io_library_flag: ['', '--with-hdf5']  # Switch between Serialbox and HDF5
+        io_library_flag: ['--with-hdf5']  # Switch between Serialbox and HDF5
+        # FIXME: serialbox builds are currently disabled until a compatible serialbox version is available to Github actions
         
         mpi_flag: ['', '--with-mpi']  # Enable MPI-parallel build
 
