Make hdf5 the default input file library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,20 +62,22 @@ if( MPI_Fortran_FOUND AND ENABLE_MPI )
 endif()
 
 ### HDF5
-if( NOT DEFINED ENABLE_HDF5 OR ENABLE_HDF5 )
-    ecbuild_find_package( NAME HDF5
-        COMPONENTS Fortran )
-endif()
-if( HDF5_FOUND AND ENABLE_HDF5 )
-    ecbuild_add_option( FEATURE HDF5
-        DESCRIPTION "HDF5" DEFAULT OFF
-        CONDITION HDF5_FOUND )
+ecbuild_add_option( FEATURE HDF5
+    DESCRIPTION "Use HDF5 to read input and reference data"
+    REQUIRED_PACKAGES "HDF5 COMPONENTS Fortran"
+    CONDITION NOT DEFINED ENABLE_HDF5 OR ENABLE_HDF5
+    DEFAULT ON )
+if( HDF5_FOUND )
     list(APPEND CLOUDSC_DEFINITIONS HAVE_HDF5 ${HDF5_Fortran_DEFINITIONS})
 endif()
 
 # Add Serialbox utility package for platform-agnostic file I/O
-find_package( Serialbox )
-if( Serialbox_FOUND )
+ecbuild_add_option( FEATURE SERIALBOX
+    DESCRIPTION "Use Serialbox to read input and reference data"
+    REQUIRED_PACKAGES "Serialbox"
+    CONDITION (NOT DEFINED ENABLE_SERIALBOX OR ENABLE_SERIALBOX) AND NOT HDF5_FOUND
+    DEFAULT OFF )
+if( SERIALBOX_FOUND )
     list(APPEND CLOUDSC_DEFINITIONS HAVE_SERIALBOX)
 endif()
 
