Skip nvhpc gpu targets

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -94,5 +94,6 @@ jobs:
       - name: Run targets
         env:
           mpi_flag: ${{ matrix.mpi_flag }}
+          arch: ${{ matrix.arch }}
         if: ${{ matrix.prec_flag == '' }}
         run: .github/scripts/run-targets.sh
