FIELD: Add skeleton GPU driver and based on the FIELD API
This currently still mimicks the classic array state object, but
creates all the necessary infra to setup a dedicated GPU variant.

--- a/bundle.yml
+++ b/bundle.yml
@@ -58,6 +58,7 @@ options :
             ENABLE_CLOUDSC_GPU_SCC=ON
             ENABLE_CLOUDSC_GPU_SCC_HOIST=ON
             ENABLE_CLOUDSC_GPU_OMP_SCC_HOIST=ON
+            ENABLE_CLOUDSC_GPU_SCC_FIELD=ON
 
     - with-cuda :
         help  : Enable GPU kernel variant based on CUDA-Fortran
