--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -8,7 +8,6 @@
 
 ecbuild_enable_fortran(REQUIRED MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/module)
 
-
 list(APPEND CLOUDSC_COMMON_SOURCES
     module/parkind1.F90
     module/yoecldp.F90
@@ -21,10 +20,13 @@ list(APPEND CLOUDSC_COMMON_SOURCES
     module/timer_mod.F90
     module/mycpu.c
     module/ec_pmon_mod.F90
+    module/oml_mod.F90
     module/file_io_mod.F90
     module/expand_mod.F90
     module/validate_mod.F90
+    module/field_module.F90
     module/cloudsc_global_state_mod.F90
+    module/cloudsc_field_state_mod.F90
     module/cloudsc_mpi_mod.F90
 )
 
