--- a/src/cloudsc_gpu/CMakeLists.txt
+++ b/src/cloudsc_gpu/CMakeLists.txt
@@ -76,29 +76,6 @@ if( HAVE_CLOUDSC_GPU_SCC )
     if ( HAVE_HDF5 )
         target_include_directories( dwarf-cloudsc-gpu-acc-scc PRIVATE ${HDF5_Fortran_INCLUDE_DIRS} )
     endif()
-
-    # OpenMP5
-    ecbuild_add_executable(
-        TARGET dwarf-cloudsc-gpu-omp-scc
-        SOURCES
-            dwarf_cloudsc_gpu.F90
-            cloudsc_driver_gpu_omp_scc_mod.F90
-            cloudsc_gpu_omp_scc_mod.F90
-        DEFINITIONS ${CLOUDSC_DEFINITIONS} CLOUDSC_GPU_SCC CLOUDSC_GPU_OMP_SCC
-    )
-    if( HAVE_OMP AND TARGET OpenMP::OpenMP_Fortran )
-        target_link_libraries( dwarf-cloudsc-gpu-omp-scc PRIVATE OpenACC::OpenACC_Fortran )
-        target_link_libraries( dwarf-cloudsc-gpu-omp-scc PRIVATE cloudsc-common-lib-static )
-    else()
-        target_link_libraries( dwarf-cloudsc-gpu-omp-scc PRIVATE cloudsc-common-lib )
-    endif()
-
-    if( HAVE_MPI AND TARGET MPI::MPI_Fortran )
-        target_link_libraries( dwarf-cloudsc-gpu-omp-scc PRIVATE MPI::MPI_Fortran )
-    endif()
-    if ( HAVE_HDF5 )
-        target_include_directories( dwarf-cloudsc-gpu-omp-scc PRIVATE ${HDF5_Fortran_INCLUDE_DIRS} )
-    endif()
 endif()
 
 
@@ -109,7 +86,7 @@ if( HAVE_CLOUDSC_GPU_SCC_HOIST )
             dwarf_cloudsc_gpu.F90
             cloudsc_driver_gpu_scc_hoist_mod.F90
             cloudsc_gpu_scc_hoist_mod.F90
-        DEFINITIONS ${CLOUDSC_DEFINITIONS} CLOUDSC_GPU_SCC_HOIST
+        DEFINITIONS ${CLOUDSC_DEFINITIONS} CLOUDSC_GPU_SCC_HOIST CLOUDSC_GPU_ACC_SCC_HOIST
     )
     if( HAVE_ACC AND TARGET OpenACC::OpenACC_Fortran )
         target_link_libraries( dwarf-cloudsc-gpu-scc-hoist PRIVATE OpenACC::OpenACC_Fortran )
@@ -123,6 +100,29 @@ if( HAVE_CLOUDSC_GPU_SCC_HOIST )
     endif()
     if ( HAVE_HDF5 )
         target_include_directories( dwarf-cloudsc-gpu-scc-hoist PRIVATE ${HDF5_Fortran_INCLUDE_DIRS} )
+    endif()
+
+    # OpenMP5
+    ecbuild_add_executable(
+        TARGET dwarf-cloudsc-gpu-omp-scc-hoist
+        SOURCES
+            dwarf_cloudsc_gpu.F90
+            cloudsc_driver_gpu_omp_scc_hoist_mod.F90
+            cloudsc_gpu_omp_scc_hoist_mod.F90
+        DEFINITIONS ${CLOUDSC_DEFINITIONS} CLOUDSC_GPU_SCC_HOIST CLOUDSC_GPU_OMP_SCC_HOIST
+    )
+    if( HAVE_OMP AND TARGET OpenMP::OpenMP_Fortran )
+        target_link_libraries( dwarf-cloudsc-gpu-omp-scc-hoist PRIVATE OpenACC::OpenACC_Fortran )
+        target_link_libraries( dwarf-cloudsc-gpu-omp-scc-hoist PRIVATE cloudsc-common-lib-static )
+    else()
+        target_link_libraries( dwarf-cloudsc-gpu-omp-scc-hoist PRIVATE cloudsc-common-lib )
+    endif()
+
+    if( HAVE_MPI AND TARGET MPI::MPI_Fortran )
+        target_link_libraries( dwarf-cloudsc-gpu-omp-scc-hoist PRIVATE MPI::MPI_Fortran )
+    endif()
+    if ( HAVE_HDF5 )
+        target_include_directories( dwarf-cloudsc-gpu-omp-scc-hoist PRIVATE ${HDF5_Fortran_INCLUDE_DIRS} )
     endif()
 endif()
 
