Fix CMake for IO libraries

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,9 +71,8 @@ endif()
 ecbuild_add_option( FEATURE HDF5
     DESCRIPTION "Use HDF5 to read input and reference data"
     REQUIRED_PACKAGES "HDF5 COMPONENTS Fortran"
-    CONDITION NOT DEFINED ENABLE_HDF5 OR ENABLE_HDF5
     DEFAULT ON )
-if( HDF5_FOUND )
+if( HAVE_HDF5 )
     list(APPEND CLOUDSC_DEFINITIONS HAVE_HDF5 ${HDF5_Fortran_DEFINITIONS})
 endif()
 
@@ -81,9 +80,9 @@ endif()
 ecbuild_add_option( FEATURE SERIALBOX
     DESCRIPTION "Use Serialbox to read input and reference data"
     REQUIRED_PACKAGES "Serialbox"
-    CONDITION (NOT DEFINED ENABLE_SERIALBOX OR ENABLE_SERIALBOX) AND NOT HDF5_FOUND
+    CONDITION NOT HAVE_HDF5
     DEFAULT OFF )
-if( SERIALBOX_FOUND )
+if( HAVE_SERIALBOX )
     list(APPEND CLOUDSC_DEFINITIONS HAVE_SERIALBOX)
 endif()
 
