Some OpenMP flag fixes

--- a/src/cloudsc_gpu/CMakeLists.txt
+++ b/src/cloudsc_gpu/CMakeLists.txt
@@ -82,7 +82,7 @@ if( HAVE_CLOUDSC_GPU_OMP_SCC_HOIST )
         list( APPEND CLOUDSC_GPU_OMP_SCC_HOIST_DEFINITIONS HAVE_OMP_TARGET_LOOP_CONSTRUCT )
     endif()
 
-    if( NOT HAVE_OMP_TARGET_TEAMS_DISTRIBUTE OR HAVE_OMP_TARGET_LOOP_CONSTRUCT )
+    if( NOT (HAVE_OMP_TARGET_TEAMS_DISTRIBUTE OR HAVE_OMP_TARGET_LOOP_CONSTRUCT) )
         ecbuild_warn( "No support for OpenMP target offload, binary will be CPU-only" )
     endif()
 
